# ecu-vias-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Pipfile  README.md  compose.yaml  main.py  pyproject.toml
bot/: __version__.py  bot.py
bot/controller/: __init__.py  moderator.py  notifications.py  start.py  subscription.py  unsubscription.py
bot/controller/commands/: cancel.py  config.py
bot/controller/menus/: initial.py  notifications.py  suscriptor.py
bot/controller/utils/: cheack_options_buttons.py  conversation_context.py
bot/db/: manager.py
bot/db/models/: __init__.py  via_model.py
bot/decorators/: debug.py
bot/handlers/: __init__.py  admin.py
bot/libs/: redis_persistence.py  translate.py
bot/services/: api.py  message_builder.py  notification_engine.py  notification_policy.py  scheduler.py  subscription_service.py  via_service.py  via_sync_service.py
bot/settings/: __init__.py  const.py
bot/translations/: cli.py  core.py  libre_translate.py
db/: manager.py
db/models/: via_model.py
docs/: analisis_tecnico_produccion.md
locale/: es.json
services/: api.py
services/cerf/: _.ecu911.gob.ec.crt
settings/: __init__.py  const.py
src/controller/: jobs.py  moderator.py  notifications.py  unsubscription.py
src/db/: manager.py
src/decorators/: debug.py
src/libs/: __init__.py
src/patterns/: singlenton.py
src/scraper/: db.py  main.py  web_scraper.py
src/settings/: __init__.py  config.py  const.py
src/translations/: __init__.py  core.py  libre_translate.py
tests/: test_api.py  test_notification_engine.py  test_notification_policy.py  test_settings.py  test_subscription_service.py  test_via_service.py  test_via_sync_service.py
(+11 files in other folders)
