[project]
name = "ecu-vias-bot"
version = "0.1.0"
description = "Telegram bot for Ecuador road status via ECU 911 API"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-telegram-bot[job-queue]>=22.6",
    "pytz>=2025.2",
    "redis>=7.1.1",
    "requests>=2.32.5",
    "requests-cache>=1.3.0",
    "tortoise-orm>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv]
